--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --soft-green-color: #55a59e;
+  --hard-green-color: #557f9e;
+  --hard-red-color: #e26868;
+  --soft-gray-color: #f3f6f6;
+  --brown-color: #4f4339;
+}
+
+html,
+body {
+  height: 100%;
+}
+h1,
+h2,
+h3 {
+  margin: 0 0 0.5rem 0;
+}
+
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", sans-serif;
+  background-color: var(--soft-green-color);
+}
+
+.container {
+  padding: 2rem;
+}
+
+.primary-btn {
+  background-color: var(--hard-green-color);
+  color: var(--soft-gray-color);
+  width: 130px;
+  cursor: pointer;
+}
+
+.error {
+  color: var(--hard-red-color);
+}
